add_complete_test(lexicon_test lexicon_test.cpp Normalizer_Lexicon)
add_complete_test(mapper_test mapper.cpp Normalizer_Mapper Mapper)
add_complete_test(rulebased_test rulebased_test Normalizer_Rulebased RuleBased ${Boost_REGEX_LIBRARY})
add_complete_test(wld_test wld_test.cpp Normalizer_WLD WLD)
if(WITH_PYTHON)
    add_complete_test(external_test external_test.cpp Normalizer_External External ${PYTHON_LIBRARIES})
endif()
if(MAKE_WLD_BENCHMARK)
    add_executable(wld_optimization wld_optimization.cpp)
    target_link_libraries(wld_optimization norma ${Boost_PROGRAM_OPTIONS_LIBRARY})
endif()
