find_package(PythonInterp 2.7 REQUIRED)
configure_file(py-norma.py.in py-norma.py)
configure_file(test_lexicon.py test_lexicon.py COPYONLY)
configure_file(test_lexicon_icu.py test_lexicon_icu.py COPYONLY)
configure_file(test_lexicon_std.py test_lexicon_std.py COPYONLY)
configure_file(test_base.py test_base.py COPYONLY)
configure_file(test_mapper.py test_mapper.py COPYONLY)
configure_file(test_rulebased.py test_rulebased.py COPYONLY)
configure_file(test_wld.py test_wld.py COPYONLY)
configure_file(test_chain.py test_chain.py COPYONLY)
add_test(PythonBindings ${PYTHON_EXECUTABLE} py-norma.py)
